--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
             <li> <a href="./accounting.html">Acc. Page</a></li>
         </ul>
     </header>
+    <p id="demo1"></p>
+    <p id="demo2"></p>
+    <p id="demo3"></p>
+    <p id="demo4"></p>
+    <p id="demo5"></p>
+    <p id="demo6"></p>
+    <p id="demo7"></p>
+    <p id="demo8"></p>
+    <p id="demo9"></p>
+    <p id="demo10"></p>
+    <p id="demo11"></p>
+    <p id="demo12"></p>
+    <p id="demo13"></p>
+    <p id="demo14"></p>
     <script src="app.js"></script>
 </body>
 <footer>
