--- a/accounting.html
+++ b/accounting.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/19fb578bed.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./style.css">
     <title>accounting</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
             <li> <a href="./accounting.html">Acc. Page</a></li>
         </ul>
     </header>
-    <script src="app.js"></script>
+    
 </body>
 <footer>
     <a href="https://www.linkedin.com/in/rula-qudah-508b941b8/"><i class="fa-brands fa-linkedin"></i></a>
