--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/19fb578bed.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./style.css">
     <title>index</title>
 </head>
 <body>
     <header>
         <h1>HR Management System</h1>
+        <img class="logo" src="./assets/hr.jpg"> 
         <!-- navigation bar -->
         <ul>
             <li> <a href="./index.html">Home</a></li>
-            <li> <a href="./accounting.html">Acc. Page</a></li>
+            <li> <a href="./accounting.html">Accounting</a></li>
         </ul>
     </header>
     <script src="app.js"></script>
